2003-02-05 1.2.05 Jeekay
* BAN now devoices clients if a ban level 25-74 is set
* If a voicee is ever devoiced by us, deop the voicer
* Bumped version to 1.2.05

2003-01-27 1.2.04 Jeekay
* Fixed help to display right options for REHASH
* Changed max TOPIC length to 230 from 154
* Changed minimum limit of CHINFO NICK to 2 from 3
* Bumped version to 1.2.04

2003-01-15 1.2.03 Jeekay
* Added OFFICIAL LIST to display all available custom verifies
* Changed SET AUTOJOIN to log a channel join when enabled
* Changed REMUSERID to report username of failed removals
* Bumped version to 1.2.03

2003-01-09 1.2.02 Jeekay
* Fixed STATUS annoyance with MAXLOGINS and users authed clients in channels
* Removed various CTCP replies
* Added OFFICIAL command and removed old #official based verifies.
* Added ability to rehash OFFICIAL
* Bumped version to 1.2.02

2002-11-09 1.2.01 Jeekay
* Added logging to UPDATEDB
* Made SET INVISIBLE on channels actually check for channel access (duh)
* Made FLOATGRACE functional again.
* Made STATUS not show COMMENT flag on channels to non-admins
* Bumped version to 1.2.01

2002-11-05 1.2.00 Jeekay
* Added USERFLAGS setting '3' to set autovoice for 25-99 and autoop for 100+
  when users are added.
* Added the keyword 'COMMENTS' to the output of STATUS if a channel has an
  active comment for it.
* Added channel flag INVISIBLE to prevent people without access in the
  channel seeing the channel access lists.
* Altered behaviour of get(Admin)AccessLevel to return 0 if either argument
  is a null pointer.
* Removed various unused flags from sqlChannel
* Bumped version to 1.2.00 - I think we've made enough changes to justify
  this.
* Started maintaining ChangeLog again

22/1/2001 ULtimaTe_
Added WELCOME message onjoin
db needs next field:
	ALTER TABLE channels ADD COLUMN welcome VARCHAR(255);

23/1/2001 ULtimaTe_
Added COMMENT command like CSC requested it.
db update:
	ALTER TABLE users ADD COLUMN comment VARCHAR(300);


23/1/2001 ULtimaTe_