@@ -1,6 +1,7 @@
 2003-02-05 1.2.05 Jeekay
 * BAN now devoices clients if a ban level 25-74 is set
 * If a voicee is ever devoiced by us, deop the voicer
+* Fixed error message given when DESCRIPTION/URL string was SET too long
 * Bumped version to 1.2.05
 
 2003-01-27 1.2.04 Jeekay
